tests/basic/not/not_iff_02.pan.out
tests/basic/not/not_iff_02.pan:4:1-3: error: unable to verify type of f8
tests/basic/not/not_iff_02.pan:7:1-3: error: unable to verify type of f9